--- a/index.html
+++ b/index.html
@@ -1534,7 +1534,7 @@
             item.addEventListener('mouseenter', function() {
                 this.querySelector('.stat-number').style.transform = 'scale(1.1)';
             });
-            i            item.addEventListener('mouseleave', function() {
+            item.addEventListener('mouseleave', function() {
                 this.querySelector('.stat-number').style.transform = 'scale(1)';
             });
         });
